Opened 10 years ago

Closed 10 years ago

#11917 closed bug (fixed)

[Printers] Redraw glitch in listview

Reported by: Janus Owned by: waddlesplash
Priority: normal Milestone: Unscheduled
Component: Preferences/Printers Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

See screenshot

Attachments (2)

Redraw glitch.png (34.0 KB ) - added by Janus 10 years ago.
0001-Fix-11917.-Avoid-redraw-glitches-in-Printers-listvie.patch (2.2 KB ) - added by Janus 10 years ago.

Download all attachments as: .zip

Change History (5)

by Janus, 10 years ago

Attachment: Redraw glitch.png added

comment:1 by Janus, 10 years ago

patch: 01

comment:2 by waddlesplash, 10 years ago

Owner: changed from phoudoin to waddlesplash
Status: newassigned

comment:3 by waddlesplash, 10 years ago

Resolution: fixed
Status: assignedclosed

Patch applied in hrev48930. Thanks!

Note: See TracTickets for help on using tickets.