Printers: avoid redraw glitches in the listview.

Fixes #11917.

Signed-off-by: Augustin Cavalier <waddlesplash@gmail.com>